# libft

./: .gitignore  .todo  CMakeLists.txt  LICENSE  Makefile  Makefile_old  README.md  TODO  author  funcs_list  libft.h  test.c
.github/: FUNDING.yml
debug/: print_memory.c  test.c
includes/: double.h  extend_dollar.h  ft_bit_macro.h  ft_cmp.h  ft_compiler.h  ft_deq.h  ft_diff_utils.h  ft_dyn_arr.h  ft_error.h  ft_eval.h  ft_fast_input_gnl.h  ft_garbage_collector.h  ft_get_next_line.h  ft_libc.h  ft_libft_mod.h  ft_list.h  ft_list_on_arr.h  ft_memory_manager.h  ft_options.h  ft_outbuff.h  ft_outbuff_dst.h  ft_printf.h  ft_printf_spec.h  ft_sort.h  ft_tstr.h  ft_vector.h  get_item_by_size.h  handle_spec.h  handle_stars.h  libft.h  prf_arg_mode.h  prf_double.h  prf_extend_dollar.h  prf_get_item_by_size.h  prf_global_bak.h  prf_handle_comma_flag.h  prf_handle_spec.h  prf_handle_stars.h  prf_print_output.h  prf_printf_spec.h  (+7 more)
includes/prf_includes/: prf_arg_mode.h  prf_double.h  prf_extend_dollar.h  prf_get_item_by_size.h  prf_global_bak.h  prf_handle_comma_flag.h  prf_handle_spec.h  prf_handle_stars.h  prf_out_fd.h  prf_print_output.h  prf_printf_spec.h  prf_read_spec.h  prf_spectostr_funcs.h
objects/: .gitkeep
sources/: ft_atoi.c  ft_bzero.c  ft_ccwords.c  ft_cmp.c  ft_cwords.c  ft_cworlds.c  ft_del_arr.c  ft_del_char_arr.c  ft_deq_1.c  ft_deq_2.c  ft_deq_3.c  ft_dyn_arr.c  ft_dyn_arr_1.c  ft_dyn_arr_3.c  ft_dyn_arr_4.c  ft_dyn_arr_5.c  ft_error.c  ft_eval.c  ft_fast_input_gnl.c  ft_findlwordlc.c  ft_free.c  ft_garbage_collector.c  ft_get_next_line.c  ft_getnbr_base.c  ft_iarr.c  ft_is_empty_str.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isdigit_ws.c  ft_isprint.c  ft_isws.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelnode.c  ft_lstdelone.c  ft_lstfind.c  ft_lstiter.c  (+70 more)
sources/ft_darr/: ft_dyn_arr_1.c  ft_dyn_arr_2.c  ft_dyn_arr_3.c  ft_dyn_arr_4.c  ft_dyn_arr_5.c
sources/ft_deq/: ft_deq_1.c  ft_deq_2.c  ft_deq_3.c  ft_deq_4.c  ft_deq_access.c  ft_deq_base.c  ft_deq_pushpop.c  ft_deq_utils.c
sources/ft_diff_utils/: ft_ccwords.c  ft_check_base.c  ft_cwords.c  ft_del_arr.c  ft_findlwordlc.c  ft_getnbr_base.c  ft_iarr.c  ft_is_empty_str.c  ft_isdigit_ws.c  ft_itoa.c  ft_memalloc.c  ft_memdel.c  ft_memrev.c  ft_pow.c  ft_print_memory.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_sfree.c  ft_skip_atoi.c  ft_skip_digits.c  ft_skip_ws.c  ft_strclr.c  ft_strdel.c  ft_strdup.c  ft_strequ.c  ft_striter.c  ft_striteri.c  ft_strjoin.c  ft_strmap.c  ft_strmapi.c  ft_strnequ.c  ft_strnew.c  ft_strset.c  ft_strsplit.c  (+5 more)
sources/ft_libc/: ft_atoi.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_isws.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_strcat.c  ft_strchr.c  ft_strcmp.c  ft_strcmp_l.c  ft_strcpy.c  ft_strlcat.c  ft_strlen.c  ft_strncat.c  ft_strncmp.c  ft_strncpy.c  ft_strnstr.c  ft_strrchr.c  ft_strstr.c  ft_tolower.c  ft_toupper.c
sources/ft_list/: ft_lstadd.c  ft_lstdel.c  ft_lstdelnode.c  ft_lstdelone.c  ft_lstfind.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c
sources/ft_list_on_arr/: ft_alst_access.c  ft_alst_addpop.c  ft_alst_base.c  ft_alst_utils.c  ft_list_on_arr_1.c  ft_list_on_arr_2.c  ft_list_on_arr_addpop.c  ft_list_on_arr_base.c
test/: test.c
(+87 files in other folders)
